--- a/index.html
+++ b/index.html
@@ -87,6 +87,6 @@
       <button class="re">Again!</button>
     </div>
 
-    <script src="game.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
